# CHIP

./: .gitignore  Makefile  README.md  pyproject.toml
.commandcode/taste/: taste.md
Data_sources_1/DHIS/MD/: Analysis_2021.md  Annual_Report_2013.md  Annual_Report_2014.md  Annual_Report_2015.md  Annual_Report_2016.md  Annual_Report_2017.md  Annual_Report_2018.md  Annual_Report_2019.md  Annual_Report_2020.md  Annual_Report_2021.md  Annual_Report_FY_2023-24.md  Week_1.md  Week_14.md  Week_15.md  Week_16.md  Week_17.md  Week_18(1).md  Week_2.md  Week_22.md  Week_23(1).md  Week_24(1).md  Week_25.md  janauary_2021.md  jhelum_leishmania.md  july_2020.md  june_2020.md  lahore_measles_outbreak.md  march_2020.md  may_2020.md  week_1(1).md  week_13.md  week_14(1).md  week_15(1).md  week_16(1).md  week_17(1).md  week_18(2).md  week_18.md  week_2(1).md  week_23.md  week_24.md  (+71 more)
Data_sources_1/DHIS/TXT/: Analysis_2021.txt  Annual_Report_2013.txt  Annual_Report_2014.txt  Annual_Report_2015.txt  Annual_Report_2016.txt  Annual_Report_2017.txt  Annual_Report_2018.txt  Annual_Report_2019.txt  Annual_Report_2020.txt  Annual_Report_2021.txt  Annual_Report_FY_2023-24.txt  Week_1.txt  Week_14.txt  Week_15.txt  Week_16.txt  Week_17.txt  Week_18(1).txt  Week_2.txt  Week_22.txt  Week_23(1).txt  Week_24(1).txt  Week_25.txt  janauary_2021.txt  jhelum_leishmania.txt  july_2020.txt  june_2020.txt  lahore_measles_outbreak.txt  march_2020.txt  may_2020.txt  week_1(1).txt  week_13.txt  week_14(1).txt  week_15(1).txt  week_16(1).txt  week_17(1).txt  week_18(2).txt  week_18.txt  week_2(1).txt  week_23.txt  week_24.txt  (+71 more)
Data_sources_1/NIH/MD/: IDSR Week 13 Bulletin (2025).md  IDSR Week 14 Bulletin (2025).md  IDSR Week 15 Bulletin (2025).md  IDSR Week 16 Bulletin (2025).md  IDSR-Weekly-Report-11-2022.md  IDSR-Weekly-Report-13-2022-1.md  IDSR-Weekly-Report-14-2022.md  IDSR-Weekly-Report-15-2022.md  IDSR-Weekly-Report-16-2022.md  IDSR-Weekly-Report-2-2022.md  IDSR-Weekly-Report-21-June-2021.md  IDSR-Weekly-Report-23_3.md  IDSR-Weekly-Report-25-2021.md  IDSR-Weekly-Report-27-2021.md  IDSR-Weekly-Report-29-2021-Final.md  IDSR-Weekly-Report-30-2021.md  IDSR-Weekly-Report-32-2021.md  IDSR-Weekly-Report-34-2021-1.md  IDSR-Weekly-Report-36-2021.md  IDSR-Weekly-Report-38-2021.md  IDSR-Weekly-Report-4-2022.md  IDSR-Weekly-Report-40-Final.md  IDSR-Weekly-Report-42-2021.md  IDSR-Weekly-Report-44-2021.md  IDSR-Weekly-Report-46-2021.md  IDSR-Weekly-Report-48-Final.md  IDSR-Weekly-Report-50.md  IDSR-Weekly-Report-52-2021.md  (+146 more)
connectors/: README.md
connectors/ajk_idsrs/: config.yaml  pyproject.toml
connectors/ajk_idsrs/ajk_idsrs/: __init__.py  connector.py
connectors/ajk_idsrs/tests/: test_ajk_discover.py
connectors/dhis_punjab_weekly/: config.yaml  pyproject.toml
connectors/dhis_punjab_weekly/dhis_punjab_weekly/: __init__.py  connector.py
connectors/dhis_punjab_weekly/tests/: test_dhis_discover.py
connectors/nih_idsr/: config.yaml  pyproject.toml
connectors/nih_idsr/nih_idsr/: __init__.py  connector.py
connectors/nih_idsr/tests/: test_nih_discover.py
connectors/pitb_dss/: config.yaml  pyproject.toml
connectors/pitb_dss/pitb_dss/: __init__.py  connector.py
connectors/pitb_dss/tests/: test_pitb_discover.py
docs/: CHIP_Ontology_Research_Brief.md
docs/architecture_v1/: architecture_diagram.excalidraw
docs/implementation_plans/: layer2_implementation_plan.md  layer3_implementation_plan.md
extractors/: README.md
extractors/ajk_idsrs_disease_tables/: config.yaml  pyproject.toml
extractors/ajk_idsrs_disease_tables/ajk_idsrs_disease_tables/: __init__.py  extractor.py
extractors/ajk_idsrs_disease_tables/tests/: test_ajk_extractor.py
extractors/dhis_punjab_disease_tables/: config.yaml  pyproject.toml
extractors/dhis_punjab_disease_tables/dhis_punjab_disease_tables/: __init__.py  extractor.py
extractors/dhis_punjab_disease_tables/tests/: test_dhis_extractor.py
extractors/nih_idsr_disease_tables/: config.yaml  pyproject.toml
extractors/nih_idsr_disease_tables/nih_idsr_disease_tables/: __init__.py  extractor.py
extractors/nih_idsr_disease_tables/tests/: test_nih_extractor.py
extractors/pitb_dss_disease_tables/: config.yaml  pyproject.toml
extractors/pitb_dss_disease_tables/pitb_dss_disease_tables/: __init__.py  extractor.py
extractors/pitb_dss_disease_tables/tests/: test_pitb_extractor.py
infra/docker/: docker-compose.full.yaml  docker-compose.layer2.yaml  docker-compose.layer3.yaml
libs/chip_connectors/: pyproject.toml
libs/chip_connectors/chip_connectors/: __init__.py  base.py  bronze.py  config.py  dedup.py  handoff.py  logging.py  metrics.py  runner.py
libs/chip_extractors/: pyproject.toml
libs/chip_extractors/chip_extractors/: __init__.py  base.py  config.py  handoff.py  kafka_producer.py  logging.py  metrics.py  runner.py  table_parser.py
migrations/: V001__layer2_ingestion_schema.sql
pipelines/extraction/: assets.py  checks.py  definitions.py  resources.py
pipelines/ingestion/: assets.py  checks.py  definitions.py  resources.py
tests/extractors_sdk/: test_extractor_base.py  test_extractor_runner.py  test_kafka_producer.py  test_table_parser.py
tests/integration/: test_dedup_concurrency.py  test_end_to_end.py  test_idempotency.py  test_layer3_end_to_end.py
tests/sdk/: test_base.py  test_bronze.py  test_config.py  test_dedup.py  test_handoff.py  test_runner.py
(+737 files in other folders)
