[project]
name = "chip-connector-ajk-idsrs"
version = "0.1.0"
description = "AJK IDSRS Connector for CHIP"
requires-python = ">=3.12"
dependencies = [
    "chip-connectors",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ajk_idsrs"]
