[project]
name = "chip-connector-dhis-punjab-weekly"
version = "0.1.0"
description = "DHIS Punjab Weekly Connector for CHIP"
requires-python = ">=3.12"
dependencies = [
    "chip-connectors",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dhis_punjab_weekly"]
