[project]
name = "chip-connector-nih-idsr"
version = "0.1.0"
description = "NIH IDSR Connector for CHIP"
requires-python = ">=3.12"
dependencies = [
    "chip-connectors",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nih_idsr"]
