[project]
name = "chip-connector-pitb-dss"
version = "0.1.0"
description = "PITB DSS Connector for CHIP"
requires-python = ">=3.12"
dependencies = [
    "chip-connectors",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pitb_dss"]
