[project]
name = "chip-extractor-ajk-idsrs-disease-tables"
version = "0.1.0"
description = "AJK IDSRS Disease Table Extractor for CHIP"
requires-python = ">=3.12"
dependencies = [
    "chip-extractors",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ajk_idsrs_disease_tables"]
