[project]
name = "chip-extractor-dhis-punjab-disease-tables"
version = "0.1.0"
description = "DHIS Punjab Disease Table Extractor for CHIP"
requires-python = ">=3.12"
dependencies = [
    "chip-extractors",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dhis_punjab_disease_tables"]
