[project]
name = "chip-extractor-nih-idsr-disease-tables"
version = "0.1.0"
description = "NIH IDSR Disease Table Extractor for CHIP"
requires-python = ">=3.12"
dependencies = [
    "chip-extractors",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nih_idsr_disease_tables"]
