[project]
name = "chip-extractor-pitb-dss-disease-tables"
version = "0.1.0"
description = "PITB DSS Disease Table Extractor for CHIP"
requires-python = ">=3.12"
dependencies = [
    "chip-extractors",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pitb_dss_disease_tables"]
