[project]
name = "chip-connectors"
version = "0.1.0"
description = "CHIP Connector SDK"
requires-python = ">=3.12"
dependencies = [
    "minio>=7.2.0",
    "psycopg[binary]>=3.1.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chip_connectors"]
