[project]
name = "chip-extractors"
version = "0.1.0"
description = "CHIP Document Extractors SDK"
requires-python = ">=3.12"
dependencies = [
    "chip-connectors",
    "confluent-kafka>=2.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "structlog>=24.1.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chip_extractors"]
